modules/aws/sentry-instance/main.tf
resource "aws_instance" "ec2" {
  ami                   = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  security_groups        = [aws_security_group.sentry_sg.id]
  subnet_id              = var.subnet_id
  associate_public_ip_address = true
  iam_instance_profile   = module.ec2_role.instance_profile_name

  root_block_device {
    volume_size = 20  # Specify the size of the root volume in GB
  }

  tags = {
    Name = var.instance_name
  }

}

resource "aws_security_group" "sg" {
  name        = "${var.instance_name}-security-group"
  description = "Security group for EC2 instance"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "security-group"
  }
}
